- [log] fix on wrong service identification. - [tree] fix on layout bug.

--- a/uses/ui-toxtree.css
+++ b/uses/ui-toxtree.css
@@ -169,7 +169,9 @@ div.tt-algorithm div.tt-classification {
 
 #tt-browser-panel .tt-controls {
   vertical-align: bottom;
-  float: right;
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 #tt-features {
